fixed some display bugs on mobile caused by css properties

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,11 @@ body {
     background-color: var(--color-background);
     color: var(--color-font);
     margin: 0px;
+    overflow-x: hidden;
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 a {
@@ -40,7 +45,6 @@ a:visited {
     width: 100%;
     margin: 1vw auto;
     border: none;
-    ;
     height: 25px;
     text-align: center;
     color: var(--color-lightroom-link);
@@ -60,20 +64,20 @@ a:visited {
 .footer,
 .header {
     justify-items: center;
-    width: 100%;
+    width: 100vw;
     position: relative;
 }
 
 .header {
     padding: 0px;
-    top: 0%;
+    top: 0vw;
     background-color: var(--color-background-header);
     border-bottom: solid 1px var(--color-border);
 }
 
 .footer {
-    bottom: 0%;
-    padding-bottom: 15px;
+    bottom: 0vw;
+    padding-bottom: 5vw;
     background-color: var(--color-background-footer);
     display: flex;
     flex-direction: row;
@@ -81,7 +85,7 @@ a:visited {
 }
 
 .navbar {
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -95,11 +99,11 @@ a:visited {
 
 .nav-button {
     text-align: center;
-    line-height: 17px;
+    line-height: 6vw;
     background: none;
     color: var(--color-font);
     border: none;
-    width: 20%;
+    width: 20vw;
     margin: 5px 0px;
     padding: 5px;
     min-width: 100px;
@@ -117,13 +121,13 @@ a:visited {
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
-    width: 100%;
-    margin: 1vw auto;
+    width: 100vw;
+    margin: 5vw auto;
 }
 
 .photo-albums {
     display: flex;
-    gap: 5px;
+    gap: 5vw;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
@@ -133,6 +137,10 @@ a:visited {
     width: 40vw;
     text-align: center;
     background-color: #373737;
+}
+
+.individual-album:hover {
+    scale: 1.1;
 }
 
 .album-cover {
@@ -148,8 +156,7 @@ a:visited {
 }
 
 .sport-images {
-    max-width: 45%;
-    min-width: 500px;
+    max-width: 45vw;
     overflow: hidden;
     margin: 1vw;
 }
@@ -166,7 +173,11 @@ a:visited {
 }
 
 .selections {
-    max-width: 45%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    width: 40vw;
     margin: 15px;
 }
 
@@ -236,8 +247,12 @@ a:visited {
         text-align: center;
     }
 
+    .selections {
+        width: 90vw;
+    }
+
     .genre-selection-container {
-        min-width: 500px;
+        width: 90vw;
     }
 
     .nav-button {
@@ -245,13 +260,17 @@ a:visited {
     }
 
     .photo-albums {
-        width: 90%;
+        width: 90vw;
         flex-direction: column;
         align-items: center;
     }
 
+    .sport-images {
+        min-width: 90vw;
+    }
+
     .individual-album {
-        width: 90%;
+        width: 90vw;
     }
 
     .footer-left {
